welcome.lessons.welcome.bat.bool2.LessBy10.scala.error
lessBy10:22: error: type mismatch;
 found   : Unit
 required: Boolean
    x=true
     ^lessBy10:21: error: type mismatch;
 found   : Unit
 required: Boolean
  if (-y<=10) {
  ^