welcome.lessons.welcome.bat.bool2.LessBy10.scala.code
def lessBy10(a:Int, b:Int, c:Int):Boolean = {
  var x=false
  var y=(a-b)
  var z=(b-c)
  var w=(a-c)
  if (w<=10) {
    x=true
  }
  if (z<=10) {
    x=true
  }
  if (y<=10) {
    x=true
  }
  if (-w<=10) {
    x=true
  }
  if (-z<=10) {
    x=true
  }
  if (-y<=10) {
    x=true
  }
}